Jsa - Avance Facturacion

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Facturar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Facturar.cshtml
@@ -55,8 +55,8 @@
 <body style="height:100%">
     @using (Html.BeginForm())
     {
-        @Html.HiddenFor(m => m.Cliente.IdEmpresa)
-        @Html.HiddenFor(m => m.Cliente.Rfc)
+        @Html.HiddenFor(m => m.Cliente)
+        @Html.HiddenFor(m => m.Tickets)
         <section class="content home">
             <div class="container-fluid">
                 <div class="row clearfix">
