JSA Avance en Auto consumo

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Facturar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Facturar.cshtml
@@ -25,6 +25,10 @@
                 $('.enableOnInput').prop('disabled', false);
                 $('.btnGuardarInfoCliente').prop('disabled', false);
             });
+            if (@ViewBag.EsGenerico) {
+                $('.enableOnInput').prop('disabled', false);
+            $('.btnGuardarInfoCliente').prop('disabled', false);
+        }
         });
 
     </script>
@@ -82,7 +86,7 @@
                                                {
                                                    settings.Name = "IdTipoPersona";
                                                    settings.Width = Unit.Percentage(100);
-                                                   settings.SelectedIndex = Model.IdTipoPersona.Value;
+                                                   settings.SelectedIndex = Model.IdTipoPersona ?? 0;
                                                    settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
                                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                                    settings.Theme = "Material";
@@ -103,7 +107,7 @@
                                                {
                                                    settings.Name = "IdRegimenFiscal";
                                                    settings.Width = Unit.Percentage(100);
-                                                   settings.SelectedIndex = Model.IdRegimenFiscal.Value;
+                                                   settings.SelectedIndex = Model.IdRegimenFiscal ?? 0;
                                                    settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
                                                    settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                                    settings.Theme = "Material";
@@ -117,63 +121,88 @@
                                             </div>
                                         </div>
                                         <div class="row clearfix">
-                                            <div class="col-lg-6 col-md-6 col-sm-6">
+                                            <div class="col-lg-4 col-md-4 col-sm-4">
                                                 <div class="form-group">
                                                     <strong>RFC:*</strong>
                                                     @Html.TextBoxFor(m => m.Rfc, new { @class = "form-control enableOnInput" })
                                                     @Html.ValidationMessageFor(m => m.Rfc, "", new { @class = "alert-danger" })
                                                 </div>
                                             </div>
-                                            <div class="col-lg-6 col-md-6 col-sm-6">
+                                            <div class="col-lg-4 col-md-4 col-sm-4">
+                                                <div class="form-group">
+                                                    E-mail:@Html.TextBoxFor(m => m.CorreoElectronico, new { @class = "form-control enableOnInput" })
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4 col-md-4 col-sm-4">
                                                 <div class="form-group" id="hide_razonS">
                                                     <strong> Razón Social:*</strong>
                                                     @Html.TextBoxFor(m => m.RazonSocial, new { @class = "form-control enableOnInput" })
                                                     @Html.ValidationMessageFor(m => m.RazonSocial, "", new { @class = "alert-danger" })
                                                 </div>
-                                            </div>
+                                            </div>                                           
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="row clearfix" id="div_hideRP">
+                        <div class="row clearfix">
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="card">
                                     <div class="header">
-                                        <h2><strong>Representante Legal</strong></h2>
+                                        <h2><strong>Informacion</strong> General</h2>
                                     </div>
                                     <div class="body">
-                                        <div class="row clearfix">
-                                            <div class="col-lg-6 col-md-6 col-sm-6">
+                                        <div id="div_hideRP">
+                                            <div class="row clearfix">
+                                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                                    <div class="form-group">
+                                                        Nombre Completo:@Html.TextBoxFor(m => m.RepresentanteLegal, new { @class = "form-control enableOnInput" })
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4 col-md-4 col-sm-4">
+                                                    <div class="form-group">
+                                                        <div>
+                                                            Teléfono:@Html.TextBoxFor(m => m.Telefono, new { @class = "form-control enableOnInput" })
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row clearfix">
+                                                <div class="col-lg-6 col-md-6 col-sm-6">
+                                                    <div class="form-group">
+                                                        Dirección:@Html.TextBoxFor(m => m.Domicilio, new { @class = "form-control enableOnInput" })
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-4 col-md-4 col-sm-4">
+                                                    <div class="form-group">
+                                                        Celular:@Html.TextBoxFor(m => m.Celular, new { @class = "form-control enableOnInput" })
+                                                    </div>
+                                                </div>
+
+                                            </div>                                            
+                                        </div>
+                                        <div class="row clearfix" id="div_hidePM">
+                                            <div class="col-lg-4 col-md-4 col-sm-4">
                                                 <div class="form-group">
-                                                    Nombre Completo:@Html.TextBoxFor(m => m.RepresentanteLegal, new { @class = "form-control enableOnInput" })
+                                                    Nombres:* @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control enableOnInput" })
+                                                    @Html.ValidationMessageFor(m => m.Nombre, "", new { @class = "alert-danger" })
                                                 </div>
                                             </div>
                                             <div class="col-lg-4 col-md-4 col-sm-4">
                                                 <div class="form-group">
                                                     <div>
-                                                        Teléfono:@Html.TextBoxFor(m => m.Telefono, new { @class = "form-control enableOnInput" })
+                                                        Apellido Paterno:*
+                                                        @Html.TextBoxFor(m => m.Apellido1, new { @class = "form-control enableOnInput" })
+                                                        @Html.ValidationMessageFor(m => m.Apellido1, "", new { @class = "alert-danger" })
                                                     </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="row clearfix">
-                                            <div class="col-lg-6 col-md-6 col-sm-6">
-                                                <div class="form-group">
-                                                    Dirección:@Html.TextBoxFor(m => m.Domicilio, new { @class = "form-control enableOnInput" })
                                                 </div>
                                             </div>
                                             <div class="col-lg-4 col-md-4 col-sm-4">
                                                 <div class="form-group">
-                                                    Celular:@Html.TextBoxFor(m => m.Celular, new { @class = "form-control enableOnInput" })
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                        <div class="row clearfix">
-                                            <div class="col-lg-6 col-md-6 col-sm-6">
-                                                <div class="form-group">
-                                                    E-mail:@Html.TextBoxFor(m => m.CorreoElectronico, new { @class = "form-control enableOnInput" })
+                                                    <div>
+                                                        Apellido Materno:
+                                                        @Html.TextBoxFor(m => m.Apellido2, new { @class = "form-control enableOnInput" })
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -181,31 +210,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row clearfix" id="div_hidePM">
-                            <div class="col-lg-4 col-md-4 col-sm-4">
-                                <div class="form-group">
-                                    Nombres:* @Html.TextBoxFor(m => m.Nombre, new { @class = "form-control enableOnInput" })
-                                    @Html.ValidationMessageFor(m => m.Nombre, "", new { @class = "alert-danger" })
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-md-4 col-sm-4">
-                                <div class="form-group">
-                                    <div>
-                                        Apellido Paterno:*
-                                        @Html.TextBoxFor(m => m.Apellido1, new { @class = "form-control enableOnInput" })
-                                        @Html.ValidationMessageFor(m => m.Apellido1, "", new { @class = "alert-danger" })
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-md-4 col-sm-4">
-                                <div class="form-group">
-                                    <div>
-                                        Apellido Materno:
-                                        @Html.TextBoxFor(m => m.Apellido2, new { @class = "form-control enableOnInput" })
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                     
                         <div class="row clearfix" id="div_hideRP">
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="card">
@@ -226,20 +231,21 @@
                                             <div class="col-lg-3 col-md-3 col-sm-3">
                                                 <div class="form-group">
                                                     @Html.DevExpress().ComboBox(settings =>
-                                       {
-                                           settings.Name = "cliente.Locacion.IdPais";
-                                           settings.Width = Unit.Percentage(100);
-                                           settings.SelectedIndex = Model.Locacion.IdPais;
-                                           settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                           settings.Theme = "Material";
-                                           settings.ControlStyle.CssClass = "enableOnInput";
-                                           settings.Properties.TextField = "Pais";
-                                           settings.Properties.ValueField = "IdPais";
-                                           settings.Properties.ValueType = typeof(byte);
-                                           settings.ClientEnabled = true;
-                                           settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeCountry";
-                                       }).BindList(ViewBag.Paises).GetHtml()
+                                               {
+                                                   settings.Name = "cliente.Locacion.IdPais";
+                                                   settings.Width = Unit.Percentage(100);
+                                                   if (Model.Locacion != null)
+                                                       settings.SelectedIndex = Model.Locacion.IdPais;
+                                                   settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                                   settings.Theme = "Material";
+                                                   settings.ControlStyle.CssClass = "enableOnInput";
+                                                   settings.Properties.TextField = "Pais";
+                                                   settings.Properties.ValueField = "IdPais";
+                                                   settings.Properties.ValueType = typeof(byte);
+                                                   settings.ClientEnabled = true;
+                                                   settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeCountry";
+                                               }).BindList(ViewBag.Paises).GetHtml()
                                                 </div>
                                             </div>
                                             <div class="col-lg-1 col-md-1 col-sm-1">
@@ -259,7 +265,8 @@
                                        {
                                            settings.Name = "Locacion.IdEstadoRep";
                                            settings.Width = Unit.Percentage(100);
-                                           settings.SelectedIndex = Model.Locacion.IdEstadoRep;
+                                           if(Model.Locacion != null)
+                                                settings.SelectedIndex = Model.Locacion.IdEstadoRep;
                                            settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
                                            settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                            settings.Theme = "Material";
@@ -370,23 +377,27 @@
                             </div>
                         </div>
                         <div class="row clearfix">
-                            <div class="col-lg-4 col-md-4 col-sm-4">
-                                <div class="form-group">
-                                    <input type="button" value="Editar" id="EditarInfoCliente" class="btn btn-raised btn-primary btn-round" />
+                            @if (!Model.IdCliente.Equals(0))
+                            {
+                                <div class="col-lg-4 col-md-4 col-sm-4">
+                                    <div class="form-group">
+                                        <input type="button" value="Editar" id="EditarInfoCliente" class="btn btn-raised btn-primary btn-round" />
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-lg-4 col-md-4 col-sm-4">
-                                <div class="form-group">
-                                    @if (ViewBag.EsEdicion)
-                                    {
-                                        <input type="submit" value="Guardar" id="btnGuardarInfoCliente" formaction="GuardarInfoCliente" formmethod="post" class="btn btn-raised btn-primary btn-round enableOnInput" />
-                                    }
-                                    else
-                                    {
-                                        <input type="submit" value="Guardar" id="btnGuardarInfoCliente" formaction="GuardarInfoCliente" formmethod="post" class="btn btn-raised btn-primary btn-round enableOnInput" />
-                                    }
+                                <div class="col-lg-4 col-md-4 col-sm-4">
+                                    <div class="form-group">
+                                        <input type="submit" value="Guardar" id="btnGuardarInfoCliente" formaction="GuardaEdicionCliente" formmethod="post" class="btn btn-raised btn-primary btn-round enableOnInput" />
+                                    </div>
                                 </div>
-                            </div>
+                            }
+                            else
+                            {                                
+                                <div class="col-lg-4 col-md-4 col-sm-4">
+                                    <div class="form-group">
+                                        <input type="submit" value="Guardar" id="btnGuardarInfoCliente" formaction="GuardarNuevoCliente" formmethod="post" class="btn btn-raised btn-primary btn-round enableOnInput" />
+                                    </div>
+                                </div>
+                            }
                             <div class="col-lg-4 col-md-4 col-sm-4">
                                 <div class="form-group">
                                     <input type="submit" value="Continuar" formaction="ContinuarGenerarFactura" formmethod="post" class="btn btn-raised btn-primary btn-round" />
