JAH- Avance Historico Ventas

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -135,6 +135,15 @@
                                 @*<li>@Html.ActionLink("Caja General Pipa", "Pipa", "CajaGeneral")</li>*@
                             </ul>
                         </li>
+                        <li>
+                            <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">receipt</i><span>Historico Ventas</span> </a>
+                            <ul class="ml-menu">
+                                @*<li><a href="ui_kit.html">Ventas</a></li>*@
+                                <li>@Html.ActionLink("Carga Informacion", "Index", "Historico")</li>
+                                <li>@Html.ActionLink("Historico Ventas", "HistoricoVentas", "Historico")</li>
+                                @*<li>@Html.ActionLink("Caja General Pipa", "Pipa", "CajaGeneral")</li>*@
+                            </ul>
+                        </li>
                         @*<li>
                                 <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-assignment"></i><span>Inventario</span> </a>
                                 <ul class="ml-menu">
