JSA - Avance Portal

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Facturar.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Facturacion/Facturar.cshtml
@@ -1,6 +1,6 @@
-﻿@using System.Web.UI.WebControls;
-@model MVC.Presentacion.Models.Catalogos.ClientesModel
+﻿@model MVC.Presentacion.Models.Catalogos.ClientesModel
 
+@using System.Web.UI.WebControls;
 @Html.DevExpress().GetStyleSheets(
             new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
             new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
@@ -15,7 +15,7 @@
 <html>
 <head>
     <script src="~/Resources/js/Facturacion.js"></script>
-    <link href="~/Resources/css/toggleCl.css" rel="stylesheet" />
+
     <script type="text/javascript">
         $(document).ready(function () {
             $('.enableOnInput').prop('disabled', true);
@@ -36,9 +36,12 @@
     </style>
 </head>
 <body>
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("ContinuarGenerarFactura", "Facturacion", FormMethod.Post))
     {
-        @*@Html.HiddenFor(m => m.Rfc)*@
+        @Html.HiddenFor(m => m.IdCliente)
+        @Html.HiddenFor(m => m.Usuario)
+        @Html.HiddenFor(m => m.IdEmpresa)
+        
         <section class="content home">
             <div class="container-fluid">
                 <div class="row clearfix">
@@ -118,25 +121,28 @@
                                             </div>
                                         </div>
                                         <div class="row clearfix">
-                                            <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="col-md-4">
                                                 <div class="form-group">
                                                     <strong>RFC:*</strong>
-                                                    @Html.TextBoxFor(m => m.Rfc, new { @class = "form-control enableOnInput" })
+                                                    @*@Html.TextBox("Rfc1", Model.Rfc, new { @class = "form-control enableOnInput" })*@
+                                                    @Html.TextBoxFor(m => m.Rfc, Model.Rfc, new { @class = "form-control enableOnInput" })
                                                     @Html.ValidationMessageFor(m => m.Rfc, "", new { @class = "alert-danger" })
                                                 </div>
                                             </div>
-                                            <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="col-md-4">
                                                 <div class="form-group">
-                                                    E-mail:@Html.TextBoxFor(m => m.CorreoElectronico, new { @class = "form-control enableOnInput" })
+                                                    <strong> E-mail: *</strong>
+                                                    @Html.TextBoxFor(m => m.CorreoElectronico, new { @class = "form-control enableOnInput" })
+                                                    @Html.ValidationMessageFor(m => m.CorreoElectronico, "", new { @class = "alert-danger" })
                                                 </div>
                                             </div>
-                                            <div class="col-lg-4 col-md-4 col-sm-4">
+                                            <div class="col-md-4">
                                                 <div class="form-group" id="hide_razonS">
                                                     <strong> Razón Social:*</strong>
                                                     @Html.TextBoxFor(m => m.RazonSocial, new { @class = "form-control enableOnInput" })
                                                     @Html.ValidationMessageFor(m => m.RazonSocial, "", new { @class = "alert-danger" })
                                                 </div>
-                                            </div>                                           
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -176,7 +182,7 @@
                                                     </div>
                                                 </div>
 
-                                            </div>                                            
+                                            </div>
                                         </div>
                                         <div class="row clearfix" id="div_hidePM">
                                             <div class="col-lg-4 col-md-4 col-sm-4">
@@ -207,8 +213,8 @@
                                 </div>
                             </div>
                         </div>
-                     
-                        <div class="row clearfix" id="div_hideRP">
+
+                        @*<div class="row clearfix" id="div_hideRP">
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="card">
                                     <div class="header">
@@ -259,19 +265,19 @@
                                                     <input type="text" name="EstadoProvincia" id="txtEdoP" class="form-control hid" placeholder="Estado" />
                                                     <div id="ddlEdo">
                                                         @Html.DevExpress().ComboBox(settings =>
-                                       {
-                                           settings.Name = "Locacion.IdEstadoRep";
-                                           settings.Width = Unit.Percentage(100);
-                                           if(Model.Locacion != null)
-                                                settings.SelectedIndex = Model.Locacion.IdEstadoRep;
-                                           settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                           settings.Theme = "Material";
-                                           settings.ControlStyle.CssClass = "enableOnInput";
-                                           settings.Properties.TextField = "Estado";
-                                           settings.Properties.ValueField = "IdEstadoRep";
-                                           settings.Properties.ValueType = typeof(int);
-                                       }).BindList(ViewBag.Estados).GetHtml()
+                                                   {
+                                                       settings.Name = "Locacion.IdEstadoRep";
+                                                       settings.Width = Unit.Percentage(100);
+                                                       if (Model.Locacion != null)
+                                                           settings.SelectedIndex = Model.Locacion.IdEstadoRep;
+                                                       settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                                       settings.Theme = "Material";
+                                                       settings.ControlStyle.CssClass = "enableOnInput";
+                                                       settings.Properties.TextField = "Estado";
+                                                       settings.Properties.ValueField = "IdEstadoRep";
+                                                       settings.Properties.ValueType = typeof(int);
+                                                   }).BindList(ViewBag.Estados).GetHtml()
                                                     </div>
                                                 </div>
                                             </div>
@@ -372,7 +378,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>*@
                         <div class="row clearfix">
                             @if (!Model.IdCliente.Equals(0))
                             {
@@ -388,7 +394,7 @@
                                 </div>
                             }
                             else
-                            {                                
+                            {
                                 <div class="col-lg-4 col-md-4 col-sm-4">
                                     <div class="form-group">
                                         <input type="submit" value="Guardar" id="btnGuardarInfoCliente" formaction="GuardarNuevoCliente" formmethod="post" class="btn btn-raised btn-primary btn-round enableOnInput" />
